# cmake_tutorial

./: .gitignore  .travis.yml  CMakeLists.txt  License.txt  README.md
include/tutorial/: math.h
script/: build.sh  cpack.sh  format.sh  install.sh  test.sh
src/: CMakeLists.txt  main.cpp  tutorial.cpp
src/tutorial/: CMakeLists.txt  make_sqrt_table.cpp  math.cpp
test/: CMakeLists.txt  test_math.cpp  test_math.h
