message(STATUS "src CMAKE_BINARY_DIR=${CMAKE_BINARY_DIR}")
message(STATUS "src CMAKE_COMMAND=${CMAKE_COMMAND}")
message(STATUS "src CMAKE_SOURCE_DIR =${CMAKE_SOURCE_DIR}")
message(STATUS "src CMAKE_CURRENT_BINARY_DIR=${CMAKE_CURRENT_BINARY_DIR}")
message(STATUS "src CMAKE_CURRENT_SOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR}")
message(STATUS "src CMAKE_CURRENT_LIST_FILE=${CMAKE_CURRENT_LIST_FILE}")
message(STATUS "src CMAKE_CURRENT_LIST_DIR=${CMAKE_CURRENT_LIST_DIR}")
message(STATUS "src CMAKE_FILES_DIRECTORY=${CMAKE_FILES_DIRECTORY}")
message(STATUS "src CMAKE_ROOT=${CMAKE_ROOT}")
message(STATUS "src CMAKE_MODULE_PATH=${CMAKE_MODULE_PATH}")
message(STATUS "src PROJECT_NAME=${PROJECT_NAME}")
message(STATUS "src CMAKE_PROJECT_NAME=${CMAKE_PROJECT_NAME}")
message(STATUS "src PROJECT_BINARY_DIR=${PROJECT_BINARY_DIR}")
message(STATUS "src PROJECT_SOURCE_DIR=${PROJECT_SOURCE_DIR}")

add_executable(TutorialBin tutorial.cpp)